BigNumber fixed styling after tab support added - not centered in parent, though

--- a/src/components/BigNumber/BigNumber.css
+++ b/src/components/BigNumber/BigNumber.css
@@ -26,6 +26,5 @@
 .content {
     height: fit-content;
     width: fit-content;
-    display: flex;
 }
 
